2004-02-20  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/libnr/Makefile.am (libnr_a_SOURCES):
	nr-coord.h nr-dim2.h nr-i-coord.h nr-matrix-ops.h nr-point-l.h
	nr-point-ops.h nr-point.h nr-rect-l.h nr-rotate.h nr-rotate-ops.h
	nr-scale-ops.h nr-scale.h nr-translate-ops.h nr-translate.h:
	New files; code moved from nr-types.h and nr-matrix.h.
	* src/libnr/nr-matrix.h:
	* src/libnr/nr-types.h:
	#include the new files.

	* src/desktop-affine.h, src/desktop-affine.cpp
	(sp_desktop_w2d_xy_point, sp_desktop_d2w_xy_point,
	sp_desktop_w2doc_xy_point, sp_desktop_doc2w_xy_point,
	sp_desktop_d2doc_xy_point, sp_desktop_doc2d_xy_point,
	sp_desktop_root2dt_xy_point, sp_desktop_dt2root_xy_point):
	Remove old NRPoint versions of these functions.

	* src/select-toolbar.cpp:
	* src/toolbox.cpp:
	* src/widgets/spw-utilities.cpp:
	Remove unused #include sp-item-transform.h.

	* src/sp-item-transform.cpp (sp_item_rotate_rel): NR::Matrix'ification.

	* src/sp-item-transform.h, src/sp-item-transform.cpp
	(sp_item_scale_rel, sp_item_skew_rel): Remove these unused functions.

	* src/sp-item-transform.h, src/sp-item-transform.cpp
	(sp_item_rotate_rel, sp_item_move_rel): Change from pair of points to
	NR::rotate and NR::translate respectively.  Update callers.

	* src/node-context.cpp (sp_node_context_root_handler):
	* src/rect-context.cpp (sp_rect_context_root_handler):
	* src/zoom-context.cpp (sp_zoom_context_root_handler):
	NR::Point'ification and var cleanup.

	* src/event-context.cpp
	(sp_event_context_private_root_handler, set_event_location):
	* src/dialogs/align.cpp (sp_align_arrange_clicked): 
	NR::Point'ification.

	* src/desktop.h (sp_desktop_zoom_relative_keep_point,
	sp_desktop_scroll_world): Add NR::Point version.

2004-02-19  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/Makefile.am: sp-item-rm-unsatisfied-cns.cpp,
	sp-item-rm-unsatisfied-cns.h, sp-guide-attachment.h,
	sp-item-notify-moveto.cpp, sp-item-notify-moveto.h,