@@ -7,7 +7,8 @@
  */
 
 #include "Shape.h"
-#include "../libnr/nr-types.h"
+#include <libnr/nr-point.h>
+#include <libnr/nr-point-fns.h>
 //#include "MyMath.h"
 #include "Path.h"
 
